[package]
authors = ["Sam Grimee <lx2sg@laru.lu>"]
description = "Nagios plugin to check online status of a BrandMeister repeater."
edition = "2021"
name = "check_brandmeister"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "3.0.0-beta.5"
nagiosplugin = "0.4"
serde = {version = "1.0", features = ["derive"]}
ureq = {version = "2.3", default-features = false, features = ["json"]}
