[package]
authors = ["Sam Grimee <lx2sg@laru.lu>"]
categories = ["command-line-utilities"]
description = "Nagios plugin to check online status of a BrandMeister repeater."
edition = "2021"
homepage = "https://github.com/sgrimee/check_brandmeister"
keywords = ["nagios", "brandmeister", "ham-radio", "amateur-radio"]
license = "MIT"
name = "check_brandmeister"
repository = "https://github.com/sgrimee/check_brandmeister"
documentation = "https://docs.rs/crate/check_brandmeister/latest"
version = "0.2.4"
exclude = ["/.github"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.0.0-rc.1", features = ["cargo"] }
nagiosplugin = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "2.3", default-features = false, features = ["json", "tls"] }

[[bin]]
name = "check_brandmeister"
doc = true

[lib]
name = "brandmeister"
